--- a/src/css/thumbs.css
+++ b/src/css/thumbs.css
@@ -40,6 +40,21 @@
     white-space: nowrap;
 }
 
+.fancybox-thumbs > ul::-webkit-scrollbar {
+    width: 7px;
+}
+
+.fancybox-thumbs > ul::-webkit-scrollbar-track{
+    background: transparent;
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+.fancybox-thumbs > ul::-webkit-scrollbar-thumb{
+    background: #2a2a2a;
+    border-radius: 10px;
+}
+
 .fancybox-thumbs > ul > li {
 	float: left;
 	overflow: hidden;
@@ -65,8 +80,6 @@ li.fancybox-thumbs-loading {
 	position: absolute;
 	top: 0;
 	left: 0;
-	min-width: 100%;
-	min-height: 100%;
 	max-width: none;
 	max-height: none;
 	-webkit-touch-callout: none;
